--- a/curso em video/exercicio12/ex014/style.css
+++ b/curso em video/exercicio12/ex014/style.css
@@ -13,10 +13,20 @@ header{
 section{
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 20px;
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.473);
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.foto{
+    border-radius: 50%;
+}
+
+#msg{
+    margin-bottom: 20px;
 }
 
 
