--- a/curso em video/exercicio12/ex015/style.css
+++ b/curso em video/exercicio12/ex015/style.css
@@ -2,7 +2,7 @@
 
 body{
     background-color: lightblue;
-    font: normal,15pt, arial;
+    font: normal, arial;
 }
 
 header{
@@ -17,6 +17,7 @@ section{
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.473);
+    font-size: 1.2em;
 }
 
 
